feat: add basic table layout to Car, Customer, and Booking components

--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,1 +1,31 @@
-<p>car works!</p>
+<div class="row">
+    <div class="col-8">
+        <div class="card">
+            <div class="card-header">
+                <div class="card-header bg-dark text-white">
+                    Car List
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>SrNo</th>
+                                        <th>Brand</th>
+                                        <th>Model</th>
+                                        <th>RegNo</th>
+                                        <th>Year</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
