--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -20,10 +20,76 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    @for (item of carList; track $index) {
+                                    <tr>
+                                        <td>{{$index+1}}</td>
+                                        <td>{{item.brand}}</td>
+                                        <td>{{item.model}}</td>
+                                        <td>{{item.regNo}}</td>
+                                        <td>{{item.year}}</td>
+                                        <td>
+                                            <button class="btn btn-primary" (click)="onEditCar(item)">Edit</button>
+                                            <button class="btn btn-danger" (click)="onDeleteCar(item.carId)">Delete</button>
+                                        </td>
+                                    </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="card">
+            <div class="card-header">
+                <div class="card-header bg-dark text-white">
+                    New Car
+                </div>
+                <div class="card-body">
+                    <form #form="ngForm">
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="">Car Brand</label>
+                                <input type="text" #personName="ngModel" minlength="3" required name="brand"
+                                    [(ngModel)]="carObj.brand" class="form-control">
+                                @if (personName.touched) {
+                                <div class="text-danger">
+                                    @if (personName?.errors?.['required']) {
+                                    <span>This field is required</span>
+                                    }
+                                    @if (personName?.errors?.['minlength']) {
+                                    <span>Min 3 characters required</span>
+                                    }
+                                </div>
+                                }
+                            </div>
+                            <div class="col-6">
+                                <label for="">Model</label>
+                                <input type="text" [(ngModel)]="carObj.model" class="form-control" name="model">
+                            </div>
+                            <div class="col-6">
+                                <label for="">RegNo</label>
+                                <input type="text" [(ngModel)]="carObj.regNo" class="form-control" name="regNo">
+                            </div>
+                            <div class="col-6">
+                                <label for="">Year</label>
+                                <input type="text" [(ngModel)]="carObj.year" class="form-control" name="year">
+                            </div>
+                        </div>
+                        <div class="row pt-2">
+                            <div class="col-6 text-center">
+                                <button class="btn btn-secondary" (click)="onReset()">Reset</button>
+                            </div>
+                            <div class="col-6 text-center">
+                                <button class="btn btn-success" [disabled]="!form.valid"
+                                    (click)="carObj.carId != 0 ? onUpdateCar() : onSaveCar()">
+                                    {{carObj.carId != 0 ? 'Update Car' : 'Save Car'}}
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
