--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -53,8 +53,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <label for="">Customer</label>
-                                <select formControlName="customerById" class="form-control" (change)="onCustomerChange($event)">
-                                    <option value="" disabled selected>Select a customer</option>
+                                <select formControlName="customerById" required class="form-control" (change)="onCustomerChange($event)">
                                     @for (item of customersList; track $index) {
                                         <option [value]="item.customerId">{{item.customerName}} - {{item.email}}</option>
                                     }
@@ -62,7 +61,7 @@
                             </div>
                             <div class="col-6">
                                 <label for="">Car</label>
-                                <select [(ngModel)]="bookingObj.carId" name="carId" class="form-control">
+                                <select [(ngModel)]="bookingObj.carId" required name="carId" class="form-control">
                                     @for (item of carsList; track $index) {
                                         <option [value]="item.carId">{{item.brand}} {{item.model}}</option>
                                     }
@@ -70,12 +69,18 @@
                             </div>
                             <div class="col-6">
                                 <label for="">Booking Date</label>
-                                <input type="date" required name="bookingDate"
-                                    [(ngModel)]="bookingObj.bookingDate" class="form-control">
+                                <input type="date" name="bookingDate" [(ngModel)]="bookingObj.bookingDate" class="form-control">
                             </div>
                             <div class="col-6">
                                 <label for="">Bill Amount</label>
-                                <input type="text" [(ngModel)]="bookingObj.totalBillAmount" class="form-control" name="totalBillAmount">
+                                <input type="text" #billAmount="ngModel" required [(ngModel)]="bookingObj.totalBillAmount" class="form-control" name="totalBillAmount">
+                                @if (billAmount.touched) {
+                                    <div class="text-danger">
+                                        @if (billAmount?.errors?.['required']) {
+                                            <span>This field is required</span>
+                                        }
+                                    </div>
+                                }
                             </div>
 
                         </div>
@@ -84,7 +89,7 @@
                                 <button class="btn btn-secondary" (click)="onReset()">Reset</button>
                             </div>
                             <div class="col-6 text-center">
-                                <button class="btn success" [disabled]="!form.valid"
+                                <button class="btn success" [disabled]="form.invalid"
                                     (click)="onSaveBooking()">
                                     Save Booking
                                 </button>
