--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -52,30 +52,51 @@
                         <div class="row">
                             <div class="col-6">
                                 <label for="carBrand">Car Brand</label>
-                                <input type="text" id="carBrand" #personName="ngModel" minlength="3" required name="brand"
+                                <input type="text" id="carBrand" #carBrand="ngModel" minlength="2" required name="brand"
                                     [(ngModel)]="carObj.brand" class="form-control">
-                                @if (personName.touched) {
-                                <div class="text-danger">
-                                    @if (personName?.errors?.['required']) {
-                                    <span>This field is required</span>
-                                    }
-                                    @if (personName?.errors?.['minlength']) {
-                                    <span>Min 3 characters required</span>
-                                    }
-                                </div>
+                                @if (carBrand.touched) {
+                                    <div class="text-danger">
+                                        @if (carBrand?.errors?.['required']) {
+                                            <span>This field is required</span>
+                                        }
+                                        @if (carBrand?.errors?.['minlength']) {
+                                            <span>Min 3 characters required</span>
+                                        }
+                                    </div>
                                 }
                             </div>
                             <div class="col-6">
                                 <label for="carModel">Model</label>
-                                <input type="text" id="carModel" [(ngModel)]="carObj.model" class="form-control" name="model">
+                                <input type="text" id="carModel" #carModel="ngModel" required [(ngModel)]="carObj.model" class="form-control" name="model">
+                                @if (carModel.touched) {
+                                    <div class="text-danger">
+                                        @if (carModel?.errors?.['required']) {
+                                            <span>This field is required</span>
+                                        }
+                                    </div>
+                                }
                             </div>
                             <div class="col-6">
                                 <label for="carRegNo">RegNo</label>
-                                <input type="text" id="carRegNo" [(ngModel)]="carObj.regNo" class="form-control" name="regNo">
+                                <input type="text" id="carRegNo" #carRegNo="ngModel" required [(ngModel)]="carObj.regNo" class="form-control" name="regNo">
+                                @if (carRegNo.touched) {
+                                    <div class="text-danger">
+                                        @if (carRegNo?.errors?.['required']) {
+                                            <span>This field is required</span>
+                                        }
+                                    </div>
+                                } 
                             </div>
                             <div class="col-6">
                                 <label for="carYear">Year</label>
-                                <input type="text" id="carYear" [(ngModel)]="carObj.year" class="form-control" name="year">
+                                <input type="text" id="carYear" #carYear="ngModel" required [(ngModel)]="carObj.year" class="form-control" name="year">
+                                @if (carYear.touched) {
+                                    <div class="text-danger">
+                                        @if (carYear?.errors?.['required']) {
+                                            <span>This field is required</span>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                         <div class="row pt-2">
